--- a/generate_dataset2.ipynb
+++ b/generate_dataset2.ipynb
@@ -845,8 +845,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "71749671e259e2f388bff91d1027364dfcb1946679d787bfae26f99b00e31da0"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.12 ('workspace')",
    "language": "python",
    "name": "python3"
   },
