--- a/test.ipynb
+++ b/test.ipynb
@@ -117,11 +117,54 @@
     "plt.scatter(green_x, green_y, c='g', marker='.')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6638.572991842333"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from geopy import distance\n",
+    "\n",
+    "num_line = []\n",
+    "time = []\n",
+    "distances = []\n",
+    "for i in range(1,2):\n",
+    "    f = open(f\"data/full/order_201611{str(i).zfill(2)}\", \"r\")\n",
+    "    lines = f.readlines()\n",
+    "    num_line.append(len(lines))\n",
+    "    for line in lines:\n",
+    "        line = line.split(\",\")\n",
+    "        start_coord = (float(line[4]), float(line[3])-180)\n",
+    "        end_coord = (float(line[6]), float(line[5])-180)\n",
+    "        distances.append(distance.distance(start_coord, end_coord).meters)\n",
+    "    f.close()\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "np.sum(num_line)\n",
+    "np.sum(time)/np.sum(num_line)\n",
+    "np.sum(distances)/np.sum(num_line)"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "71749671e259e2f388bff91d1027364dfcb1946679d787bfae26f99b00e31da0"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.12 ('workspace')",
    "language": "python",
    "name": "python3"
   },
